<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="menu_qlphieumuon">Quản lý phiếu mượn</string>
    <string name="menu_qlloaisach">Quản lý loại sách</string>
    <string name="menu_qlsach">Quản lý sách</string>
    <string name="menu_qlthanhvien">Quản lý thanh viên</string>
    <string name="menu_top">Top sách mượn nhiều nhất</string>
    <string name="menu_doanhthu">Doanh thu</string>
    <string name="menu_themnguoidung">Thêm người dùng</string>
    <string name="menu_matkhau">Đổi mật khẩu</string>
    <string name="menu_dangxuat">Đăng xuất</string>
    <string name="app_name">Du_an_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="title_activity_maingiaodien">maingiaodien</string>
</resources>